force-app/main/default/objects/Lab_Order_Event__e/Lab_Order_Event__e.object-meta.xml
<CustomObject>
    <label>Lab Order Event</label>
    <pluralLabel>Lab Order Events</pluralLabel>
</CustomObject>