force-app/main/default/objects/Lab_Order_Event__e/fields/Lab_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Lab_Order_Id__c</fullName>
    <label>Lab Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>