force-app/main/default/objects/Lab_Order_Event__e/fields/Order_Summary_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Summary_Id__c</fullName>
    <label>Order Summary Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>